--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="lib/phaser.js"></script>
         <script src="js/setup.js"></script>
         <script src="js/util.js"></script>
+        <script src="js/Sword.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/enemy.js"></script>
         <script src="js/Level.js"></script>
