added menu picture added items layer. Added Food to heal player

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/util.js"></script>
         <script src="js/Sword.js"></script>
         <script src="js/Healthbar.js"></script>
+        <script src="js/Food.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/enemy.js"></script>
         <script src="js/Level.js"></script>
