--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="js/Sword.js"></script>
         <script src="js/Bomb.js"></script>
         <script src="js/Healthbar.js"></script>
+        <script src="js/Destructable.js"></script>
         <script src="js/Food.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/enemy.js"></script>
