--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="js/Destructable.js"></script>
         <script src="js/Food.js"></script>
         <script src="js/Player.js"></script>
-        <script src="js/enemy.js"></script>
+        <script src="js/Skall.js"></script>
         <script src="js/Level.js"></script>
         <script src="states/main.js"></script>
         <script src="states/final.js"></script>
