--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/setup.js"></script>
         <script src="js/util.js"></script>
         <script src="js/Sword.js"></script>
+        <script src="js/Bow.js"></script>
         <script src="js/Bomb.js"></script>
         <script src="js/Healthbar.js"></script>
         <script src="js/Destructable.js"></script>
