--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
         <title>phaser_tiled</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!--Lib-->
         <script src="lib/phaser.js"></script>
         <script src="js/setup.js"></script>
         <script src="js/util.js"></script>
+
+        <!--Scripts-->
         <script src="js/Sword.js"></script>
         <script src="js/Bow.js"></script>
         <script src="js/Bomb.js"></script>
         <script src="js/Healthbar.js"></script>
-        <script src="js/Destructable.js"></script>
+        <script src="js/Destructible.js"></script>
         <script src="js/Food.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/Skall.js"></script>
         <script src="js/Level.js"></script>
+
+        <!--States-->
         <script src="states/main.js"></script>
         <script src="states/final.js"></script>
     </head>
