--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="js/Healthbar.js"></script>
         <script src="js/Destructible.js"></script>
         <script src="js/Food.js"></script>
-        <script src="js/Player.js"></script>
+        <script src="js/player.js"></script>
         <script src="js/Skall.js"></script>
         <script src="js/Level.js"></script>
 
