fixed asset import again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="js/Sword.js"></script>
         <script src="js/Bow.js"></script>
         <script src="js/Bomb.js"></script>
-        <script src="js/Healthbar.js"></script>
+        <script src="js/healthBar.js"></script>
         <script src="js/Destructible.js"></script>
         <script src="js/Food.js"></script>
         <script src="js/player.js"></script>
